updated the layout and include files

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,5 @@
+<!-- This shows the site navigation -->
+
 <nav>
   {% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
