--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,7 +1,12 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<!-- This shows the favicon in the browser URL bar -->
+<!-- The icons were generated with https://realfavicongenerator.net -->
+
+<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
+<link rel="manifest" href="/icon/site.webmanifest">
+<link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/icon/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/icon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
