fixed all notes and included the embedded video's

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/style.css">
+
+    <!-- You can use open graph tags to customize link previews.
+    Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+    <meta property="og:url"           content="http://www.fieldtriptoolbox.org/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="FieldTrip" />
+    <meta property="og:description"   content="The toolbox for MEG and EEG analysis" />
+    <meta property="og:image"         content="https://www.fieldtriptoolbox.org/media/fieldtriplogo.png" />
+
     <title>{{ page.title }}</title>
     {% include favicon.html %}
   </head>
