--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,7 +1,7 @@
 <!-- This shows the tags for a specific page -->
 
 <span class="tag">
-  {% if page.tags[0] %}
+  {% if page.tags != nill and page.tags != "" %}
     Tags:
     {% for thistag in page.tags %}
       <a href="/tag/{{ thistag }}/">{{ thistag }}</a>
