use the includes without html extension

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -17,10 +17,10 @@
         letter-spacing: -1px;
       }
     </style>
-    {% include favicon.html %}
+    {% include favicon %}
   </head>
   <body>
-    {% include navigation.html %}
+    {% include navigation %}
 
     <div class="container">
       <h1>404</h1>
