--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
+  {% include head %}
   <body>
-    {% include navigation.html %}
+    {% include navigation %}
+
     <h1>Pages tagged with "{{ page.tag }}"</h1>
 
     {% if site.data.tag[page.tag] != nill %}
@@ -15,6 +16,6 @@
       </ul>
     {% endif %}
 
-    {% include footer.html %}
+    {% include footer %}
   </body>
 </html>
