--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
+  {% include head %}
   <body>
-    {% include navigation.html %}
+    {% include navigation %}
 
     <div class="row">
       <div class="col-md-2">
-        {% include left.html %}
+        {% include left %}
       </div>
       <div class="col-md-8">
-        {% include tags.html %}
+        {% include tags %}
         {{ content }}
       </div>
       <div class="col-md-2">
-        {% include right.html %}
+        {% include right %}
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include footer %}
   </body>
 </html>
