added sticky footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
     {% include navigation %}
 
    <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-2">
         {% include left %}
       </div>
-      <div class="col-md-8">
+      <div class="col-sm-8">
         {% include tags %}
         {{ content }}
       </div>
