--- a/static/css/custom/_variables.scss
+++ b/static/css/custom/_variables.scss
@@ -1,5 +1,23 @@
 $primary: #b0252c;
 
 pre {
-  background-color: #ebebeb;
+  background-color: #bbbbbb;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 40px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px; /* Set the fixed height of the footer here */
+  line-height: 40px; /* Vertically center the text there */
+  background-color: #f8f9fa;
 }
