added the most recent changes from the wiki, removed the footer as it was overlapping with the text, updated CHANGES

--- a/static/css/custom/_variables.scss
+++ b/static/css/custom/_variables.scss
@@ -10,9 +10,11 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
+
+.content {
   margin-bottom: 40px; /* Margin bottom by footer height */
 }
+
 .footer {
   position: absolute;
   bottom: 0;
