--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,18 +4,20 @@
   <body>
     {% include navigation %}
 
-   <div class="row">
-      <div class="col-sm-2">
-        {% include left %}
+    <span class="content">
+     <div class="row">
+        <div class="col-sm-2">
+          {% include left %}
+        </div>
+        <div class="col-sm-8">
+          {% include tags %}
+          {{ content }}
+        </div>
+        <div class="col-md-2">
+          {% include right %}
+        </div>
       </div>
-      <div class="col-sm-8">
-        {% include tags %}
-        {{ content }}
-      </div>
-      <div class="col-md-2">
-        {% include right %}
-      </div>
-    </div>
+    </span>
 
     {% include footer %}
   </body>
