restructuring SCSS files, improved styling of code blocks

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,10 +2,4 @@
 ---
 
 @import 'bootstrap/bootstrap';
-
-.gs-result:hover {
-	@extend .bg-light;
-}
-.gsc-search-box {
-	min-width: 30em;
-}
+@import 'custom/customstyles';
