--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
     <div class="container">
      <div class="row">
 
-        <div class="col-sm-2">
+        <div class="col-sm-1">
           {% include left %}
         </div>
-        <div class="col-sm-8 text-justify">
+        <div class="col-sm-8 main-page-content">
           {% include tags %}
           {{ content }}
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           {% include right %}
         </div>
       </div>
