adding GitHub icon link to navbar, minor fix with main content margin

--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -10,6 +10,9 @@
 /* -------------------------------------------------- */
 /* Main page content */
 
+.main-page-content {
+    margin-bottom: 40px;
+}
 .main-page-content p {
   text-align: justify;
 }
