--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,3 +3,4 @@
 
 @import 'bootstrap/bootstrap';
 @import 'custom/customstyles';
+@import 'https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
