--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -11,7 +11,7 @@
 /* Main page content */
 
 .main-page-content {
-    margin-bottom: 40px;
+    margin-bottom: 110px;
 }
 .main-page-content p {
   text-align: justify;
@@ -48,15 +48,19 @@ html {
   min-height: 100%;
 }
 
-.content {
-  margin-bottom: 40px; /* Margin bottom by footer height */
-}
-
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 40px; /* Set the fixed height of the footer here */
-  line-height: 40px; /* Vertically center the text there */
+  height: 90px; /* Set the fixed height of the footer here */
   background-color: #f8f9fa;
+}
+
+.footer-content {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+.footer-content p {
+  margin: 0;
+  padding: 0;
 }
