--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -18,6 +18,16 @@
   text-align: justify;
 }
 
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+  margin-top: 1.2rem;
+}
+h3, h4, h5, h6 {
+  font-size: 1rem;
+}
 
 /* -------------------------------------------------- */
 /* Code blocks */
