--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -36,6 +36,7 @@ pre {
   background-color: #eeeeee;
   padding: 0.8em;
   border-radius: 0.3em;
+  font-size: 82.5%;
 }
 
 /* -------------------------------------------------- */
