disable syntax highlighting in in-line (i.e. single-word) pieces of code

--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -42,6 +42,11 @@ pre {
   margin-bottom: 0;
 }
 
+/* don't highlight inline code segments */
+code.highlighter-rouge {
+  color: inherit;
+}
+
 /* -------------------------------------------------- */
 /* Page Table of Contents */
 
