fix #168 - implemented cookie banner - moved faq/tracking.md to privacy.md and elaborated on the personal data we process and store - disable youtube, vimeo, google analytics and google search when not allowed - facebook was already disabled (hardcoded) - the website stores a cookie for 31 days, it will then ask again - google search and google analytics have been moved to separate include files to make conditional display (based on readCookie()) more clear

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head %}
+  {% include google-analytics %}
   <body>
     {% include navigation %}
 
@@ -20,6 +21,8 @@
       </div>
     </div>
 
+    {% include google-search %}
     {% include footer %}
+    {% include cookie-banner %}
   </body>
 </html>
