--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head %}
+  {% include favicon %}
   {% include google-analytics %}
   <body>
     {% include navigation %}
