--- a/assets/css/custom/_customstyles.scss
+++ b/assets/css/custom/_customstyles.scss
@@ -122,3 +122,17 @@ table {
       margin-top: 0; }
     table tr th :last-child, table tr td :last-child {
       margin-bottom: 0; }
+
+/* -------------------------------------------------- */
+/* Homepage styles for releases and news items */
+
+#sec-latest-release {
+  border-top: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
+  padding-bottom: 0.5em;
+}
+#sec-news-and-announcements .post-excerpt {
+  border-top: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
+  padding-top: 1em;
+}
