added plausible as alternative to google analytics
note that GA is not yet disabled

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   {% include head %}
   {% include favicon %}
+  {% include plausible %}
   {% include google-analytics %}
   <body>
     {% include navigation %}
