include plausible in tag overview pages, removed google analytics from all pages

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head %}
   {% include favicon %}
-  {% include google-analytics %}
+  {% include plausible %}
   <body>
     {% include navigation %}
 
