--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head %}
-  {% include favicon %}
-  {% include plausible %}
+  <head>
+    {% include head %}
+    {% include favicon %}
+    {% include plausible %}
+  </head>
+
   <body>
     {% include navigation %}
 
